# GambaBot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  test.py
bot_dc/: Dockerfile  main.py  pyproject.toml
bot_dc/cogs/: acc_create.py  balance.py  beg.py  coin_flip.py  transaction.py
bot_dc/helpers/: impersonate.py
server/: Dockerfile  main.py  pyproject.toml
server/api/: account.py  auth.py  game.py  profile.py  transaction.py  user.py
server/crypto/: jwt_handler.py
server/database/: account.py  coin.py  game.py  holder.py  transact.py  user.py
server/helper/: db_helper.py  jwt_helper.py
server/schema/: db.py  discord.py
server/sql/: schema.sql  user_create.sql
sql/: schema.sql
