[project]
name = "gamba-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asqlite>=2.0.0",
    "cryptography>=46.0.2",
    "fastapi[standard]>=0.118.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.25",
    "discord-py>=2.6.3",
]


[tool.uv.workspace]
members = [
    "server",
    "bot_dc",
]
